--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fsevents": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
